--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<table border="1px solid black " style="background-color:yellow;">
+<table style="border:1px solid black;
+background-color:yellow;">
 
 	<caption>Student Details</caption>
 	<tr><th>NAME</th>
